gianfar: Add IEEE 1588 V2 support
This patch integrates the IEEE 1588 specification v2 ioctls with
the gianfar driver. The user space application should be IXXAT
IEEE1588 stack v1.04 or above.

The IEEE 1588 driver can also be disabled/enabled via sysfs.
To enable 1588:
	- echo 1 > /sys/*/ethN/ptp_1588
To disable 1588
	- echo 0 > /sys/*/ethN/ptp_1588

Signed-off-by: Sandeep Gopalpet <sandeep.kumar@freescale.com>
Signed-off-by: Bhaskar Upadhaya <Bhaskar.Upadhaya@freescale.com>
Signed-off-by: Tang Yuantian <Yuantian.Tang@freescale.com>
[
The commit 9c4886e5,
"gianfar: Fix invalid TX frames returned on error queue when time stamping"

already add additional 16 padding bytes between the TxFCB and the frame to
avoid overwriting that frame.

So its unnecessary to memcp to save/restore that overwritten parts, but
we should keep skb_pull(skb, GMAC_FCB_LEN) before gfar_ptp_store_txstamp()
since gfar_ptp_parse_packet() needs to parse this packet from fcb. Then
we can pull the remaining GMAC_TXPAL_LEN.
]
Signed-off-by: Tiejun Chen <tiejun.chen@windriver.com>

--- a/drivers/net/ethernet/freescale/Makefile
+++ b/drivers/net/ethernet/freescale/Makefile
@@ -13,7 +13,8 @@ obj-$(CONFIG_GIANFAR) += gianfar_driver.o
 obj-$(CONFIG_PTP_1588_CLOCK_GIANFAR) += gianfar_ptp.o
 gianfar_driver-objs := gianfar.o \
 		gianfar_ethtool.o \
-		gianfar_sysfs.o
+		gianfar_sysfs.o \
+		gianfar_1588.o
 obj-$(CONFIG_UCC_GETH) += ucc_geth_driver.o
 ucc_geth_driver-objs := ucc_geth.o ucc_geth_ethtool.o
 obj-$(if $(CONFIG_DPA),y) += dpa/
