fsl_qbman: Add drivers for Freescale DPAA Qman & Bman
Extracted from QorIQ-DPAA-SDK-v1.1-20111026-systembuilder.iso

Signed-off-by: Geoff Thorpe <Geoff.Thorpe@freescale.com>
Signed-off-by: Kumar Gala <galak@kernel.crashing.org>
Signed-off-by: Andy Fleming <afleming@freescale.com>
Signed-off-by: Jeffrey Ladouceur <Jeffrey.Ladouceur@freescale.com>
Signed-off-by: Haiying Wang <Haiying.Wang@freescale.com>

--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -134,4 +134,6 @@ source "drivers/staging/ozwpan/Kconfig"
 
 source "drivers/staging/lttng2/Kconfig"
 
+source "drivers/staging/fsl_qbman/Kconfig"
+
 endif # STAGING
