--- a/drivers/staging/Makefile
+++ b/drivers/staging/Makefile
@@ -57,4 +57,5 @@ obj-$(CONFIG_ANDROID)		+= android/
 obj-$(CONFIG_PHONE)		+= telephony/
 obj-$(CONFIG_RAMSTER)		+= ramster/
 obj-$(CONFIG_USB_WPAN_HCD)	+= ozwpan/
+obj-$(CONFIG_FSL_DPA)		+= fsl_qbman/
 obj-$(CONFIG_LTTNG2)		+= lttng2/
