--- a/arch/powerpc/Kconfig
+++ b/arch/powerpc/Kconfig
@@ -721,6 +721,11 @@ config FSL_PAMU
 	help
 	  Freescale PAMU/IOMMU support
 
+config HAS_FSL_QBMAN
+	bool "Datapath Acceleration Queue and Buffer management"
+	help
+	  Datapath Acceleration Queue and Buffer management
+
 # Yes MCA RS/6000s exist but Linux-PPC does not currently support any
 config MCA
 	bool
