--- a/arch/powerpc/platforms/85xx/Kconfig
+++ b/arch/powerpc/platforms/85xx/Kconfig
@@ -221,6 +221,7 @@ config P3041_DS
 	select HAS_RAPIDIO
 	select PPC_EPAPR_HV_PIC
 	select HAS_FSL_PAMU
+	select HAS_FSL_QBMAN
 	help
 	  This option enables support for the P3041 DS board
 
@@ -248,6 +249,7 @@ config P4080_DS
 	select HAS_RAPIDIO
 	select PPC_EPAPR_HV_PIC
 	select HAS_FSL_PAMU
+	select HAS_FSL_QBMAN
 	help
 	  This option enables support for the P4080 DS board
 
@@ -265,6 +267,7 @@ config P5020_DS
 	select HAS_RAPIDIO
 	select PPC_EPAPR_HV_PIC
 	select HAS_FSL_PAMU
+	select HAS_FSL_QBMAN
 	help
 	  This option enables support for the P5020 DS board
 
