uio: Add FSL RMan UIO driver support
Extracted from QorIQ-DPAA-SDK-v1.1-20111026-systembuilder.iso

Add support to expose FSL RMan controller to user space.  The RMan is
composed of a global configuration and multiple inbound classification
units.  We map the global configuration as one UIO device and each
classification unit as a unique UIO device.

Signed-off-by: Minghuan Lian <Minghuan.Lian@freescale.com>
Signed-off-by: Kumar Gala <galak@kernel.crashing.org>
[Modify for current kernel version context]
Integrated-by: Tiejun Chen <tiejun.chen@windriver.com>

--- a/drivers/staging/Makefile
+++ b/drivers/staging/Makefile
@@ -59,4 +59,5 @@ obj-$(CONFIG_RAMSTER)		+= ramster/
 obj-$(CONFIG_USB_WPAN_HCD)	+= ozwpan/
 obj-$(CONFIG_FSL_DPA)		+= fsl_qbman/
 obj-$(CONFIG_FSL_PME2)		+= fsl_pme2/
+obj-$(CONFIG_FSL_RMAN_UIO)	+= fsl_rman/
 obj-$(CONFIG_LTTNG2)		+= lttng2/
