--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -138,4 +138,6 @@ source "drivers/staging/fsl_qbman/Kconfig"
 
 source "drivers/staging/fsl_pme2/Kconfig"
 
+source "drivers/staging/fsl_rman/Kconfig"
+
 endif # STAGING
