powerpc/85xx: Add DPAA/networking support for P4080DS
Extracted from QorIQ-DPAA-SDK-v1.1-20111026-systembuilder.iso

* Add fsl,dpaa to device tree nodes that are probed
* setup 'private' storage needed by Qman, Bman and PME
* Add MDIO driver to deal with P4080DS MDIO muxing

Signed-off-by: Ioana Radulescu <ruxandra.radulescu@freescale.com>
Signed-off-by: Kumar Gala <galak@kernel.crashing.org>

--- a/arch/powerpc/platforms/85xx/Kconfig
+++ b/arch/powerpc/platforms/85xx/Kconfig
@@ -252,6 +252,7 @@ config P4080_DS
 	select HAS_FSL_PAMU
 	select HAS_FSL_QBMAN
 	select HAS_FSL_PME
+	select FSL_P4080_DS_MDIO if PHYLIB
 	help
 	  This option enables support for the P4080 DS board
 
@@ -275,6 +276,11 @@ config P5020_DS
 	  This option enables support for the P5020 DS board
 
 endif # FSL_SOC_BOOKE
+
+config FSL_P4080_DS_MDIO
+	bool
+	select VITESSE_PHY
+	depends on PHYLIB
 
 config TQM85xx
 	bool
