powerpc/85xx: Add a new MDIO driver for hydra boards
Extracted from QorIQ-DPAA-SDK-v1.1-20111026-systembuilder.iso

On hydra boards (e.g. P5020 and P3041) the mdio buses are selected
through an FPGA PIXIS register instead of GPIO pins.

Signed-off-by: Ioana Radulescu <ruxandra.radulescu@freescale.com>
Signed-off-by: Timur Tabi <timur@freescale.com>
Acked-by: Andy Fleming <afleming@freescale.com>
Signed-off-by: Kumar Gala <galak@kernel.crashing.org>

--- a/arch/powerpc/platforms/85xx/Kconfig
+++ b/arch/powerpc/platforms/85xx/Kconfig
@@ -223,6 +223,7 @@ config P3041_DS
 	select HAS_FSL_PAMU
 	select HAS_FSL_QBMAN
 	select HAS_FSL_PME
+	select FSL_HYDRA_DS_MDIO if PHYLIB
 	help
 	  This option enables support for the P3041 DS board
 
@@ -272,12 +273,18 @@ config P5020_DS
 	select HAS_FSL_PAMU
 	select HAS_FSL_QBMAN
 	select HAS_FSL_PME
+	select FSL_HYDRA_DS_MDIO if PHYLIB
 	help
 	  This option enables support for the P5020 DS board
 
 endif # FSL_SOC_BOOKE
 
 config FSL_P4080_DS_MDIO
+	bool
+	select VITESSE_PHY
+	depends on PHYLIB
+
+config FSL_HYDRA_DS_MDIO
 	bool
 	select VITESSE_PHY
 	depends on PHYLIB
