fsl_usdpaa_shmem: reworked from old "fsl_shmem" driver.
Extracted from QorIQ-DPAA-SDK-v1.1-20111026-systembuilder.iso

This the old "fsl_shmem" driver, renamed to "fsl_usdpaa_shmem", with a
variety of updates that make it USDPAA-specific.

The support for a "fsl-shmem" device-tree node specifying the memory
region is removed, as this required the manual coordination of too many
hard-coded constants. (User-space address-handling, the "mem=" boot
parameter to the kernel, the buffer-pool seeding in the device-tree, and
the "TLB1 hack" in the kernel memory handling.) Note also that the
original authors of fsl_shmem, who believed it to be removed for good,
were not keen to see it revived in its existing form.

This change uses a Kconfig setting to trigger an early-boot allocation of
a physically-contiguous memory range, size is also controlled by a
Kconfig setting (default: 256MB).

Also, the old "TLB1 hack" is included and has been updated to match
against the early-boot allocation, rather than assuming hard-coded
addresses. This also means the driver cannot be built as a loadable
module, it must be built into the kernel. The driver's early-boot hook
will attempt to find an unused region of suitably-aligned memory, by
searching from the high-end of the memory range downwards, though due to a
conflict with ramdisk handling this logic intentionally limits itself to
the first 6GB. It also reserves a "tlbcam_index" value to ensure other
uses of TLB1 (HugeTLB, kvm, ...) don't conflict.

The resulting character device "/dev/fsl-usdpaa-shmem" (renamed) supports
a new ioctl() to allow the application to retrieve the physical (DMA)
base-address and size of the memory region. (So this change is inter-
dependent on a matching change in the user-space "dma_mem" driver.)

Signed-off-by: Geoff Thorpe <Geoff.Thorpe@freescale.com>
Signed-off-by: Becky Bruce <beckyb@kernel.crashing.org>
Signed-off-by: Emil Medve <Emilian.Medve@Freescale.com>
Signed-off-by: Mahima Verma <Mahima.Verma@fre

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -220,6 +220,41 @@ config ENCLOSURE_SERVICES
 	  driver (SCSI/ATA) which supports enclosures
 	  or a SCSI enclosure device (SES) to use these services.
 
+config FSL_USDPAA_SHMEM
+	bool "Freescale USDPAA shared memory driver"
+	depends on PPC_85xx || PPC_E500MC
+	help
+	  This driver provides user-space access to a large contiguous
+	  memory allocation, reserved for use by Freescale USDPAA (User
+	  Space DataPath Acceleration Architecture) applications. This
+	  driver includes a private ioctl() interface for conveying the
+	  size and (DMA-)base-address of the memory region. It is also
+	  hooked by the MMU code, such that a single TLB1 mapping is
+	  created for the entire region when the first fault occurs.
+	  The intention is for this driver to be replaced by HugeTLB
+	  facilities, once they are available for USDPAA platforms.
+
+config FSL_USDPAA_SHMEM_LOG4
+	int "Log4 page-order of USDPAA memory reservation"
+	depends on FSL_USDPAA_SHMEM
+	range 7 9
+	default 8
+	help
+	  This configures the size of contiguous memory reserved for
+	  the USDPAA DMA memory map. It is carved out of the physical
+	  address-space early during boot, and cannot be released or
+	  resized thereafter. Some of this memory is used for seeding
+	  Bman buffer pools, and the remainder is for ad-hoc DMA buffer
+	  allocation (eg. Qman-stashable FQ contexts). Current USDPAA
+	  defaults require ~24MB for buffers.
+
+	  This region must be a power-of-four multiple of the page
+	  size (4KB), so the minimal usable value with the current
+	  USPAA (and the default) is 256MB (setting=8).
+
+	  For memory size 'x', the required setting is 'log4(x/4096)'.
+	  Or for setting 'x', the memory size will be '4096*(4^x)'.
+
 config SGI_XP
 	tristate "Support communication between SGI SSIs"
 	depends on NET
