--- a/init/Kconfig
+++ b/init/Kconfig
@@ -726,6 +726,18 @@ config CGROUP_PERF
 
 	  Say N if unsure.
 
+#
+# Architectures with a specialized tracing clock should select this.
+#
+config HAVE_TRACE_CLOCK
+	def_bool n
+
+#
+# Architectures with only a 32-bits clock source should select this.
+#
+config HAVE_TRACE_CLOCK_32_TO_64
+	def_bool n
+
 menuconfig CGROUP_SCHED
 	bool "Group CPU scheduler"
 	default n
