--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1362,6 +1362,9 @@ config MARKERS
 
 source "arch/Kconfig"
 
+config HAVE_LTT_DUMP_TABLES
+	def_bool n
+
 endmenu		# General setup
 
 config HAVE_GENERIC_DMA_COHERENT
