omap-trace-clock
omap trace clock

Implement LTTng trace clock for omap. Should eventually make it so it can be
compiled-out, but that would imply fixing other architecture's trace clocks
too.

It only supports uniprocessor for now. IPIs would be needed to restore each
CPU's ccnt register in sync with the 32k clock upon resync_trace_clock to
support SMP.

Eventually, looking at how much time is lost lost when clearing the top
ccnt bit should be done, so we can compensate for the cycles lost.

Signed-off-by: Mathieu Desnoyers <mathieu.desnoyers@polymtl.ca>

--- a/arch/arm/plat-omap/Kconfig
+++ b/arch/arm/plat-omap/Kconfig
@@ -28,6 +28,9 @@ config ARCH_OMAP2PLUS
 	select OMAP_DM_TIMER
 	select USE_OF
 	select PROC_DEVICETREE if PROC_FS
+	select HAVE_TRACE_CLOCK
+	select HAVE_TRACE_CLOCK_32_TO_64
+	select OMAP_32K_TIMER
 	help
 	  "Systems based on OMAP2, OMAP3 or OMAP4"
 
