Add GPIO driver support for Portwell NANO 8044
Portwell NANO 8044: Portwell NANO 8044 uses a multifunction
hip(w83627DHG) to provide GPIO function, Since add GPIO driver for the
chip

Signed-off-by: Wei Yang <Wei.Yang@windriver.com>

[gpio: detect the SuperIO chip at runtime
This patch is used to runtime detect gpio on multi board]
Signed-off-by: Li Liang <liang.li@windriver.com>
Signed-off-by: Yang Wei <wei.yang@windriver.com>

--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -178,6 +178,13 @@ config GPIO_SCH
 	  The Intel Tunnel Creek processor has 5 GPIOs powered by the
 	  core power rail and 9 from suspend power supply.
 
+config GPIO_NANO_8044
+	tristate "GPIO Support for NANO 8044 ITX board"
+	depends on X86 && PCI
+	help
+	  The driver provides a GPIO interface to supporting input and outputs.
+
+
 config GPIO_VX855
 	tristate "VIA VX855/VX875 GPIO"
 	depends on PCI
