dpaa_eth: Add extra headroom to Rx buffers
Add a configurable option for specifying if extra headroom is required
on the Rx path. This would instruct FMan to reserve some extra space
at the beginning of a data buffer, before Internal Context fields are
copied. This is in addition to the private data area already reserved
for driver internal use. It does not affect the buffer layout on the Tx
path

The value of the extra headroom can be tweaked from Kconfig or with a
bootarg (dpa_extra_headroom)

This feature is useful on particular forwarding scenarios that add extra
headers to the forwarded frame to avoid unbounded increase of recycled
buffers

Signed-off-by: Ioana Radulescu <ruxandra.radulescu@freescale.com>
Signed-off-by: Madalin Bucur <madalin.bucur@freescale.com>
Signed-off-by: Stefan Szabo <szbs001@freescale.com>
[Kevin: Original patch taken from FSL
QorIQ-SDK-V1.2-SOURCE-20120614-yocto.iso image]
Signed-off-by: Kevin Hao <kexin.hao@windriver.com>

--- a/drivers/net/ethernet/freescale/Kconfig
+++ b/drivers/net/ethernet/freescale/Kconfig
@@ -128,6 +128,22 @@ config DPA_MAX_FRM_SIZE
               "fsl_fman_phy_max_frm=<YourValue>";
 	    * in non-Hypervisor-based scenarios, via u-boot's env, by modifying the "bootargs" env variable.
 
+config DPA_EXTRA_HEADROOM
+	int "Add extra headroom at beginning of data buffers"
+	depends on DPA
+	range 0 447
+	default "0"
+	help
+	  Configure this to tell the Frame Manager to reserve some extra space at the beginning of a
+	  data buffer on the receive path, before Internal Context fields are copied. This is in addition
+	  to the private data area already reserved for driver internal use.
+	  The option does not affect in any way the layout of transmitted buffers.
+
+	  This setting can be overridden by specifying "dpa_extra_headroom" in the kernel bootargs:
+	    * in Hypervisor-based scenarios, by adding a "chosen" node with the "bootargs" property specifying
+              "dpa_extra_headroom=<YourValue>";
+	    * in non-Hypervisor-based scenarios, via u-boot's env, by modifying the "bootargs" env variable.
+
 config DPAA_ETH_SG_SUPPORT
 	bool "Add support for S/G frames in the DPAA Ethernet driver"
 	depends on DPA
