powerpc/85xx: Enhance cache-sram kernel boot parameter
Two command line parameters are combined into one since they
should always be used simultaneously.
The term offset is misleading, replace it with addr as it
represents a physical address.

Signed-off-by: Tang Yuantian <Yuantian.Tang@freescale.com>

Devised separate patch for cache-sram boot param enhancement,
rebased and resolved conflict in drivers/net/Kconfig.

Signed-off-by: Claudiu Manoil <claudiu.manoil@freescale.com>
[Kevin: Original patch taken from FSL
QorIQ-SDK-V1.2-SOURCE-20120614-yocto.iso image. Just some context
mods in order to port to 3.4 kernel.]
Signed-off-by: Kevin Hao <kexin.hao@windriver.com>

--- a/arch/powerpc/platforms/85xx/Kconfig
+++ b/arch/powerpc/platforms/85xx/Kconfig
@@ -20,8 +20,8 @@ config FSL_85XX_CACHE_SRAM
 	help
 	  When selected, this option enables cache-sram support
 	  for memory allocation on P1/P2 QorIQ platforms.
-	  cache-sram-size and cache-sram-offset kernel boot
-	  parameters should be passed when this option is enabled.
+	  cache-sram kernel command line parameter
+	  should be passed when this option is enabled.
 
 config MPC8540_ADS
 	bool "Freescale MPC8540 ADS"
