--- a/drivers/net/ethernet/freescale/Kconfig
+++ b/drivers/net/ethernet/freescale/Kconfig
@@ -93,9 +93,8 @@ config GIANFAR_L2SRAM
 	select FSL_85XX_CACHE_SRAM
 	help
 	  This option supports the allocation of Buffer Descriptors in L2 SRAM.
-	  cache-sram-size and cache-sram-offset command line parameters should
-	  be passed accordingly, otherwise the driver will fall back to normal
-	  memory operation.
+	  cache-sram kernel command line parameter should be passed accordingly,
+	  otherwise the driver will fall back to normal memory operation.
 
 config DPA
 	bool "Freescale Data Path Frame Manager Ethernet"
