powerpc/corenet: 14 Gb/s configuration
New default FMan configuration (14G/FMan):
* Enable out-of-the-box the automatic FMan resource (FIFOs, TNUMs, DMAs)
  allocation configuration,
* disable one 1Gb Ethernet port of each FMan on P3/5 platforms
  (one that will -- in FSL-shipped configurations -- likely be NC,
   or connected to an SGMII),
* disable three of the Offline Parsing ports (save for O/H port #0,
  which is required for host commands),
This is the maximal configuration that supports jumbo frames out of the box
(with jumbo NOT enabled out-of-the-box).

Signed-off-by: Stefan Szabo <szbs001@freescale.com>
[Kevin: Original patch taken from FSL
QorIQ-SDK-V1.2-SOURCE-20120614-yocto.iso image. Remove the mods for
 specific board's dts and default configuration files.]
Signed-off-by: Kevin Hao <kexin.hao@windriver.com>
Integrated-by: Yongli He <yongli.he@windriver.com>

--- a/arch/powerpc/boot/dts/p5020ds.dts
+++ b/arch/powerpc/boot/dts/p5020ds.dts
@@ -260,6 +260,7 @@
 					#size-cells = <0>;
 					compatible = "fsl,hydra-mdio";
 					fsl,mdio-handle = <&mdio0>;
+					fsl,hydra-mdio-mux-mask = <0x70>;
 					fsl,hydra-mdio-muxval = <0x00>;
 					status = "disabled";
 
@@ -285,6 +286,7 @@
 					#size-cells = <0>;
 					compatible = "fsl,hydra-mdio";
 					fsl,mdio-handle = <&mdio0>;
+					fsl,hydra-mdio-mux-mask = <0x70>;
 					fsl,hydra-mdio-muxval = <0x00>;
 					status = "disabled";
 
@@ -539,6 +541,7 @@
 			compatible = "fsl,p5020-dpa-ethernet", "fsl,dpa-ethernet";
 			fsl,qman-channel = <&qpool1>;
 			fsl,fman-mac = <&enet2>;
+			status = "disabled";
 		};
 		ethernet@3 {
 			compatible = "fsl,p5020-dpa-ethernet", "fsl,dpa-ethernet";
